# arXiv_researcher

./: .env.copy  .gitignore  .python-version  Dockerfile  README.md  add_from_json.py  app.py  chroma-inference.ipynb  init_agent.ipynb  install-python-deps.sh  pyproject.toml  rag.ipynb  requirements.txt  stream.py  streamlit_app.py  test.ipynb
RAG/: rag.ipynb
bucket/: add_from_json.py  install-python-deps.sh  requirements.txt
chroma_db/: chroma.sqlite3
cloudrun/: Dockerfile  app.py  app_v0.py  app_v1.py  requirements.txt
cloudrun/templates/: index.html  index_llm.html  results.html
create_vectorestore/: read_from_vectorestore.ipynb  vectorestore.ipynb
iac/: chroma.tfvars.example  main.tf  provider.tf  variables.tf
iac/script/: add_from_json.py
iac_simple/: chroma.tfvars.example  main.tf  variables.tf
rag/: chroma-inference.ipynb  explore_vectorstore.ipynb  rag.ipynb
src/arxivsearcher/: api_request.py  chroma_qa.py  llm_agent.py  load_chroma.py  retrieval.py  trend_analysis.py
streamlit_app/: README.md  app.py  requirements.txt
tests/: agent_test.ipynb  arxivapi copy.ipynb  arxivapi.ipynb  test.ipynb
