[project]
name = "arxivsearcher"
version = "0.1.0"
description = ""
authors = [{ name = "Celia ZHANG", email = "celiazhang349@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv==2.1.3",
    "langchain==0.3.22",
    "langchain-huggingface==0.1.2",
    "langchain-google-vertexai==2.0.18",
    "langchain_chroma==0.2.2",
    "chromadb==0.6.3",
    "sentence-transformers==4.0.1",
    "streamlit==1.44.1",
    "matplotlib==3.10.1",
    "transformers==4.50.3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
